--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -544,7 +544,7 @@ Par exemple, nous avons toujours pris la  même valeur de $r_c$ pour toutes les 
 
 
 Enfin, toutes ces expériences ont été menées sur des cartes 1D apprenant à représenter des données en une dimension. Ce cas de figure est rarement rencontré en pratique et il serait intéressant d'évaluer l'apprentissage sur des dimensions d'entrées supérieures. Pour une tâche de quantification vectorielle classique par une SOM, il est plus pertinent d'utiliser des cartes en deux dimensions. Nous chercherons donc également à utiliser des cartes 2D dans une architecture CxSOM. Le passage de 1D à 2D n'est pas immédiat et pose de nombreuses questions quant à l'organisation des poids et la recherche de BMU par relaxation. 
-Nous présenterons ainsi dans le chapitre suivant des expériences préliminaires étudiant l'organisation des poids dans une architecture de cartes en deux dimensions.
+Nous présenterons à ce propos à la fin de ce manuscrit des expériences préliminaires étudiant l'organisation des poids dans une architecture de cartes en deux dimensions.
 
 \ifSubfilesClassLoaded{
     \printbibliography
