--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %Documentclass thesul modifée pour la page de garde : thesul-cs
-\documentclass[12pt]{thesul-cs}
+\documentclass[11pt]{thesul-cs}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
@@ -29,7 +29,7 @@
 \usepackage{multicol} %% Pour mettre un texte sur plusieurs colonnes
 \usepackage{scrextend} %Forcer la 4eme  de couverture en page pair
 \usepackage{tikz}
-\usepackage[absolute]{textpos} 
+\usepackage[absolute]{textpos}
 \usepackage{colortbl}
 \usepackage{amsmath}
 \usepackage{amsthm}
@@ -39,7 +39,7 @@
 \usepackage[ruled,french,frenchkw,onelanguage]{algorithm2e}
 \usepackage{mathtools}
 \usepackage{subfiles}
-%\SetRealMargins{26mm}{16mm}
+\SetRealMargins{26mm}{20mm}
 \renewcommand{\floatpagefraction}{.8}
 
 \DefineBibliographyStrings{french}{
