--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1573,3 +1573,79 @@
 	year = {1996},
 	pages = {1185--1197},
 }
+
+
+@incollection{lizier_detecting_2007,
+	address = {Berlin, Heidelberg},
+	title = {Detecting {Non}-trivial {Computation} in {Complex} {Dynamics}},
+	volume = {4648},
+	isbn = {978-3-540-74912-7},
+	booktitle = {Advances in {Artificial} {Life}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Lizier, Joseph T. and Prokopenko, Mikhail and Zomaya, Albert Y.},
+	year = {2007},
+	doi = {10.1007/978-3-540-74913-4_90},
+	pages = {895--904}
+}
+
+
+@article{williams_nonnegative_2010,
+	title = {Nonnegative {Decomposition} of {Multivariate} {Information}},
+	url = {http://arxiv.org/abs/1004.2515},
+	abstract = {Of the various attempts to generalize information theory to multiple variables, the most widely utilized, interaction information, suffers from the problem that it is sometimes negative. Here we reconsider from first principles the general structure of the information that a set of sources provides about a given variable. We begin with a new definition of redundancy as the minimum information that any source provides about each possible outcome of the variable, averaged over all possible outcomes. We then show how this measure of redundancy induces a lattice over sets of sources that clarifies the general structure of multivariate information. Finally, we use this redundancy lattice to propose a definition of partial information atoms that exhaustively decompose the Shannon information in a multivariate system in terms of the redundancy between synergies of subsets of the sources. Unlike interaction information, the atoms of our partial information decomposition are never negative and always support a clear interpretation as informational quantities. Our analysis also demonstrates how the negativity of interaction information can be explained by its confounding of redundancy and synergy.},
+	language = {en},
+	urldate = {2020-10-27},
+	journal = {arXiv:1004.2515 [math-ph, physics:physics, q-bio]},
+	author = {Williams, Paul L. and Beer, Randall D.},
+	month = apr,
+	year = {2010},
+	note = {arXiv: 1004.2515},
+	keywords = {94A15, Computer Science - Information Theory, Mathematical Physics, Physics - Biological Physics, Physics - Data Analysis, Statistics and Probability, Quantitative Biology - Neurons and Cognition, Quantitative Biology - Quantitative Methods},
+	annote = {Comment: 14 pages, 9 figures},
+	file = {Williams et Beer - 2010 - Nonnegative Decomposition of Multivariate Informat.pdf:/home/noemie/Zotero/storage/URZP7NXV/Williams et Beer - 2010 - Nonnegative Decomposition of Multivariate Informat.pdf:application/pdf},
+}
+
+
+@inproceedings{ceguerra_information_2011,
+	address = {Paris, France},
+	title = {Information storage and transfer in the synchronization process in locally-connected networks},
+  language = {en},
+	urldate = {2019-05-24},
+	booktitle = {2011 {IEEE} {Symposium} on {Artificial} {Life} ({ALIFE})},
+	publisher = {IEEE},
+	author = {Ceguerra, Rommel V. and Lizier, Joseph T. and Zomaya, Albert Y.},
+	year = {2011},
+	pages = {54--61}
+  }
+
+
+@article{ross_mutual_2014,
+	title = {Mutual {Information} between {Discrete} and {Continuous} {Data} {Sets}},
+	volume = {9},
+	issn = {1932-6203},
+	journal = {PLoS ONE},
+	author = {Ross, Brian C.},
+	year = {2014},
+}
+
+@inproceedings{Gao2017EstimatingMI,
+  title={Estimating Mutual Information for Discrete-Continuous Mixtures},
+  author={Weihao Gao and Sreeram Kannan and Sewoong Oh and Pramod Viswanath},
+  booktitle={NIPS},
+  year={2017}
+}
+
+@article{Hjelm2018LearningDR,
+  title={Learning deep representations by mutual information estimation and maximization},
+  author={R. Devon Hjelm and Alex Fedorov and Samuel Lavoie-Marchildon and Karan Grewal and Adam Trischler and Yoshua Bengio},
+  journal={ArXiv},
+  year={2018},
+  volume={abs/1808.06670}
+}
+
+@article{Chicharro2017QuantifyingMR,
+  title={Quantifying multivariate redundancy with maximum entropy decompositions of mutual information},
+  author={Daniel Chicharro},
+  journal={arXiv: Data Analysis, Statistics and Probability},
+  year={2017}
+}
